sonar fixes.